Minor padding spacing fix for mobile

--- a/css/media-small.css
+++ b/css/media-small.css
@@ -35,12 +35,12 @@
   }
 
   .content-wrap {
-    margin:30px 0 0 0;
+    margin: 0;
   }
 
   .content-section {
     display: grid;
-    padding: 6rem 1rem;
+    padding: 0 1rem 4rem 1rem;
   }
 
   .project-card {
